--- a/beck_app/src/main/webapp/user_views/events/List.xhtml
+++ b/beck_app/src/main/webapp/user_views/events/List.xhtml
@@ -35,10 +35,15 @@
                         </p:column>
                        
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{eventController.prepareCreate}" update=":EventCreateForm" oncomplete="PF('EventCreateDialog').show()"/>
+                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{eventController.prepareCreate}" update=":EventCreateForm" oncomplete="PF('EventCreateDialog').show()">
+                              <f:actionListener binding="#{eventController.setParametrsPickList()}"/> 
+                            </p:commandButton>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":EventViewForm" oncomplete="PF('EventViewDialog').show()" disabled="#{empty eventController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":EventEditForm" oncomplete="PF('EventEditDialog').show()" disabled="#{empty eventController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{eventController.destroy}" update=":growl,datalist" disabled="#{empty eventController.selected}"/>
+                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":EventEditForm" oncomplete="PF('EventEditDialog').show()" disabled="#{empty eventController.selected}">
+                                <f:actionListener binding="#{eventController.setParametrsPickList()}"/> 
+                            </p:commandButton>
+                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{eventController.deleteEventWithConnections()}" update=":growl,datalist" disabled="#{empty eventController.selected}"/>
+                            
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
