--- a/beck_app/src/main/webapp/template_admin.xhtml
+++ b/beck_app/src/main/webapp/template_admin.xhtml
@@ -42,7 +42,7 @@
                             <p:menuitem value="UserGroups" outcome="/admin_views/userGroups/List.xhtml" />
                             <p:menuitem value="EventImg" outcome="/admin_views/imagesEvent/List.xhtml" />
                             <p:menuitem value="NoticeImg" outcome="/admin_views/imagesNotice/List.xhtml" />
-                            <p:menuitem value="Wyloguj" action="#{userController.logout()}" />
+                            <p:menuitem value="Wyloguj" actionListener="#{userController.logout()}" />
                     </p:menu>
                      </h:form>
                 </p:layoutUnit>
