--- a/beck_app/src/main/webapp/template_user.xhtml
+++ b/beck_app/src/main/webapp/template_user.xhtml
@@ -36,9 +36,9 @@
                                 <p:menuitem value="Wydarzenia znajomych" outcome="/user_views/events/List.xhtml" />
                             </p:submenu>
                             <p:menuitem value="Recenzje i artykuły" outcome="/user_views/reviews/List.xhtml" />
-                            <p:menuitem value="Dodaj nową recenzje" outcome="/user_views/reviews/AddNewReview.xhtml" />
+                            <p:menuitem value="Dodaj nową recenzje"  outcome="/user_views/reviews/AddNewReview.xhtml" />
                             <p:menuitem value="Poczta" outcome="/user_views/communication/List.xhtml" />
-                            <p:menuitem value="Wyloguj" action="#{userController.logout}" />
+                            <p:menuitem value="Wyloguj" actionListener="#{userController.logout}" />
                         </p:menubar>   
                     </h:form>
                 </p:layoutUnit>
