--- a/beck_app/src/main/webapp/user_views/reviews/AddNewReview.xhtml
+++ b/beck_app/src/main/webapp/user_views/reviews/AddNewReview.xhtml
@@ -7,39 +7,51 @@
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template_user.xhtml">
-
-
         <ui:define name="title">
             <h:outputText value="Edytor tekstu"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
-            <h:form id="NoticeListForm" prependId="true" enctype="multipart/form-data" >
-                <p:outputLabel value="Tytuł: " />
-                <p:inputText binding="#{title}"/>
-                <p:editor id="editor" widgetVar="editorWidget" value="#{noticeController.selected.message}" width="800" height="400" />
 
-                  <p:fileUpload id="txtCatImage"
-                              value="#{imagesNoticeController.selected.images}"
-                              mode="advanced"
-                              dragDropSupport="true"
-                              fileLimit="1"
-                              sizeLimit="300000"
-                              multiple="false"
-                              allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
-                              fileUploadListener="#{imagesNoticeController.fileUploadListener}"/>
-                
-                <h:panelGrid columns="2" style="margin-top: 10px">
-                    <p:commandButton value="Zapisz artykuł"  actionListener="#{noticeController.selected.setTitle(title.value)}"  update="display" oncomplete="PF('dlg').show()" icon="ui-icon-disk" >
-                        <f:actionListener binding="#{imagesNoticeController.insert()}" />
+            <h:form id="NoticeListForm" prependId="true"  >
+                <h:panelGrid columns="1" >
+                    <p:outputLabel value="Tytuł: " />
+                    <p:inputText widgetVar="titleVar" value="#{noticeController.selectedSave.title}"/>
+                    <p:editor id="editor" widgetVar="editorWidget" value="#{noticeController.selectedSave.message}" width="800" height="350" />
+                </h:panelGrid>
+
+                <h:panelGrid columns="2" >
+                    <p:commandButton value="Zapisz artykuł"  actionListener="#{noticeController.setSelectedFromSelectedSave()}"  update="display" oncomplete="PF('dlg').show()" icon="ui-icon-disk" >
                         <f:actionListener binding="#{noticeController.create()}" />
+                        <f:actionListener binding="#{noticeController.getByTitle()}" />
                     </p:commandButton>
                     <p:commandButton value="Wyczyść" type="button" onclick="PF('editorWidget').clear();" icon="ui-icon-close" />
                 </h:panelGrid>
-
                 <p:dialog header="Content" widgetVar="dlg" showEffect="fade" hideEffect="fade">           
                     <h:outputText id="display" value="Artykuł został zapisany" escape="false" />
                 </p:dialog>
+            </h:form>
+
+            <h:form id="NoticeListFormImg" prependId="true" enctype="multipart/form-data"  >
+                
+                <h:panelGrid columns="1" >          
+                    <p:fileUpload id="txtCatImage" label="Wybierz" cancelLabel="Anuluj" uploadLabel="Prześlij"
+                                  value="#{imagesNoticeController.selected.images}"
+                                  mode="advanced"
+                                  dragDropSupport="true"
+                                  fileLimit="1"
+                                  sizeLimit="300000"
+                                  multiple="false"
+                                  allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
+                                  fileUploadListener="#{imagesNoticeController.fileUploadListener}"/>
+
+                    <p:commandButton id="btnSubmitS" value="Dodaj zdjecia"  actionListener="#{imagesNoticeController.prepareCreate()}"   icon="ui-icon-disk"  ajax="false">
+                       <f:actionListener binding="#{imagesNoticeController.insert()}" />
+                       <f:actionListener binding="#{imagesNoticeController.selected.setImagesDesc('test')}" />
+                       <f:actionListener binding="#{imagesNoticeController.selected.setEventId(noticeController.selectedSave)}" />         
+                       <f:actionListener binding="#{imagesNoticeController.create()}" />                 
+                    </p:commandButton>
+                </h:panelGrid>
             </h:form>
 
 
