--- a/beck_app/src/main/webapp/template_user.xhtml
+++ b/beck_app/src/main/webapp/template_user.xhtml
@@ -28,18 +28,20 @@
                 <p:layoutUnit position="west" size="185" header="Menu" collapsible="true">
                     <h:form id="menuForm">
                         <p:growl autoUpdate="true"/>
+                          <p:panelGrid columns="1">
                         <p:menubar>                    
                             <p:menuitem value="Strona główna" outcome="/user_views/main.xhtml" />
                             <p:menuitem value="Grupy" outcome="/user_views/manage_groups/manage_groups.xhtml" />                                                  
                             <p:submenu label="Wydarzenia" >
                                 <p:menuitem value="Moje wydarzenia" outcome="/user_views/events/List.xhtml" />
-                                <p:menuitem value="Wydarzenia znajomych" outcome="/user_views/events/List.xhtml" />
+                                <p:menuitem value="Wydarzenia znajomych" outcome="/user_views/events/FriendsEvents.xhtml" />
                             </p:submenu>
                             <p:menuitem value="Recenzje i artykuły" outcome="/user_views/reviews/List.xhtml" />
                             <p:menuitem value="Dodaj nową recenzje"  outcome="/user_views/reviews/AddNewReview.xhtml" />
                             <p:menuitem value="Poczta" outcome="/user_views/communication/List.xhtml" />
                             <p:menuitem value="Wyloguj" actionListener="#{userController.logout}" />
                         </p:menubar>   
+                          </p:panelGrid>
                     </h:form>
                 </p:layoutUnit>
                 <p:growl id="growl" life="3000" />
