--- a/beck_app/src/main/webapp/user_views/events/FriendsEvents.xhtml
+++ b/beck_app/src/main/webapp/user_views/events/FriendsEvents.xhtml
@@ -33,6 +33,13 @@
                             </f:facet>
                             <h:outputText value="#{item.eventName}"/>
                         </p:column>
+                        
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="Opis"/>
+                            </f:facet>
+                            <h:outputText value="#{item.eventDesc}"/>
+                        </p:column>
                        
                         <f:facet name="footer">
 
