--- a/beck_app/src/main/webapp/user_views/communication/List.xhtml
+++ b/beck_app/src/main/webapp/user_views/communication/List.xhtml
@@ -10,11 +10,11 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListCommunicationTitle}"></h:outputText>
+            <h:outputText value="Skrzynka pocztowa"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
-            <p:panel  header="#{bundle.ListCommunicationTitle}">
+            <p:panel  header="Skrzynka pocztowa">
                 
                     <p:tabView id="tabViews" >
                         <p:ajax event="tabChange"  update=":tabViews:CommunicationListFormDo:datalist3,:tabViews:CommunicationListFormOd:datalist2"/>                            
@@ -101,7 +101,7 @@
                                         <h:outputText value="#{item.userIdTo.username}"/>
                                     </p:column>
                                     <f:facet name="footer">
-                                        <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm_1" oncomplete="PF('CommunicationCreateDialog1').show()"/>
+                                        <p:commandButton id="createButton" icon="ui-icon-plus"   value="Nowa wiadomość" actionListener="#{communicationController.prepareCreate}" update=":CommunicationCreateForm_1" oncomplete="PF('CommunicationCreateDialog1').show()"/>
                                         <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CommunicationViewForm_1" oncomplete="PF('CommunicationViewDialog1').show()" disabled="#{empty communicationController.selected}"/>
                                         <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Delete}" actionListener="#{communicationController.setVisibleSelectedToFalseAfterDelete}"  update=":tabViews:CommunicationListFormDo:datalist3,:growl"  disabled="#{empty communicationController.selected}"/>
                                        
