--- a/beck_app/src/main/webapp/user_views/events/Create.xhtml
+++ b/beck_app/src/main/webapp/user_views/events/Create.xhtml
@@ -86,125 +86,127 @@
            </p:scrollPanel>
         </p:dialog>
         
-        <script src="http://maps.google.com/maps/api/js?sensor=false" 
+       <script src="http://maps.google.com/maps/api/js?sensor=false" 
         type="text/javascript"></script>
         <script type="text/javascript">
-            var currentMarker = null;
-            var listMarkers = [];
-            var directionsService = new google.maps.DirectionsService();
-            var directionsDisplay = new google.maps.DirectionsRenderer();
-            var request;
-            function init() {
-                var mapOptions = {
-                    center: new google.maps.LatLng(41.381542, 2.122893),
-                    zoom: 15
-                };
-                map = new google.maps.Map(document.getElementById("EventCreateForm:map"), mapOptions);
-                directionsDisplay.setMap(map);
-                google.maps.event.addListener(map, 'click', function (e) {
-                    handlePointClick(e.latLng, map);
-                });
+                        var currentMarker = null;
+                        var listMarkers = [];
+                        var directionsService = new google.maps.DirectionsService();
+                        var directionsDisplay = new google.maps.DirectionsRenderer();
+                        var request;
+                        function init() {
+                            var mapOptions = {
+                                center: new google.maps.LatLng(41.381542, 2.122893),
+                                zoom: 15
+                            };
+                            map = new google.maps.Map(document.getElementById("EventCreateForm:map"), mapOptions);
+                            directionsDisplay.setMap(map);
+                            google.maps.event.addListener(map, 'click', function (e) {
+                                handlePointClick(e.latLng, map);
+                            });
+
+                        }
+                        function handlePointClick(event) {
+                            if (currentMarker === null) {
+                                document.getElementById('EventCreateForm:lat').value = event.A;
+                                document.getElementById('EventCreateForm:lng').value = event.F;
+
+                                currentMarker = new google.maps.Marker({
+                                    position: new google.maps.LatLng(event.A, event.F),
+                                    map: map
+                                });
+                                markerAddComplete();
+                            }
+                        }
+                        function handlePointClick2(position, map) {
+                            if (currentMarker === null) {
+
+                                currentMarker = new google.maps.Marker({
+                                    position: position,
+                                    map: map
+                                });
+                                markerAddComplete();
+
+                            }
+                        }
+
+                        function markerAddComplete() {
+                            var title = document.getElementById('title');
+                            listMarkers.push(currentMarker);
+
+                            currentMarker = null;
+                            if (listMarkers.length > 1) {
+                                calcRoute();
+                            }
+                            remoteCommandFunctionName();
+                        }
+
+                        function cancel() {
+                            PF('dlg').hide();
+                            currentMarker.setMap(null);
+                            currentMarker = null;
+
+                            return false;
+                        }
+                        function removeMarker() {
+                            listMarkers.pop();
+                            calcRoute();
+                        }
+                        function calcRoute() {
+
+                            var waypts = [];
+                            for (var marker in listMarkers) {
+                                listMarkers[marker].setVisible(false);
+                                var element = listMarkers[marker].position;
+                                if (marker &gt; 0 &amp;&amp; marker &lt; (listMarkers.length - 1)){
+                                    waypts.push({
+                                        location: "" + element.A + "," + element.F,
+                                        stopover: true});
+                                }
+                            }
+
+
+                            request = {
+                                origin: "" + listMarkers[0].position.A + "," + listMarkers[0].position.F,
+                                destination: "" + listMarkers[listMarkers.length - 1].position.A + "," + listMarkers[listMarkers.length - 1].position.F,
+                                waypoints: waypts,
+                                travelMode: google.maps.TravelMode.WALKING
+                            };
+
+                            directionsService.route(request, function (response, status)
+                            {
+                                if (status === google.maps.DirectionsStatus.OK) {
+                                    directionsDisplay.setDirections(response);
+                                    //                        alert('ok');
+
+                                }
+                                else {
+                                    alert('failed');
+                                }
+                            }
+                            );
+
 
             }
-            function handlePointClick(event) {
-                if (currentMarker === null) {
-                    document.getElementById('EventCreateForm:lat').value = event.A;
-                    document.getElementById('EventCreateForm:lng').value = event.F;
-
-                    currentMarker = new google.maps.Marker({
-                        position: new google.maps.LatLng(event.A, event.F),
-                        map: map
-                    });
-                    markerAddComplete();
-                }
-            }
-            function handlePointClick2(position, map) {
-                if (currentMarker === null) {
-
-                    currentMarker = new google.maps.Marker({
-                        position: position,
-                        map: map
-                    });
-                    markerAddComplete();
-
-                }
-            }
-
-            function markerAddComplete() {
-                var title = document.getElementById('title');
-                listMarkers.push(currentMarker);
-
-                currentMarker = null;
-                if (listMarkers.length > 1) {
-                    calcRoute();
-                }
-                remoteCommandFunctionName();
-            }
-
-            function cancel() {
-                PF('dlg').hide();
-                currentMarker.setMap(null);
-                currentMarker = null;
-
-                return false;
-            }
-            function removeMarker() {
-                listMarkers.pop();
-                calcRoute();
-            }
-            function calcRoute() {
-
+            function calcRoute2() {
+                //remoteChangeCommand();
+                var valueFromSrver =document.getElementById('EventViewForm:hiddenButton').value;
+                var mess=valueFromSrver.replace("]","").replace("[","");
+                var tab=mess.split(", ");
                 var waypts = [];
-                for (var marker in listMarkers) {
-                    listMarkers[marker].setVisible(false);
-                    var element = listMarkers[marker].position;
-                     if(marker &gt; 0 &amp;&amp; marker &lt; (listMarkers.length-1)){                
+                for (var marker in tab) {                  
+                    var element = tab[marker];
+                     if(marker &gt; 0 &amp;&amp; marker &lt; (tab.length-1) &amp;&amp; marker &lt; 4){                
                         waypts.push({
-                        location:""+element.A+","+element.F,
+                        location:element.replace(":",","),
                         stopover:true});
                     }
-                }
+                } 
 
 
                 request = {
-                    origin: "" + listMarkers[0].position.A + "," + listMarkers[0].position.F,
-                    destination: "" + listMarkers[listMarkers.length - 1].position.A + "," + listMarkers[listMarkers.length - 1].position.F,
-                    waypoints: waypts,
-                    travelMode: google.maps.TravelMode.WALKING
-                };
-
-                directionsService.route(request, function (response, status)
-                {
-                    if (status === google.maps.DirectionsStatus.OK) {
-                        directionsDisplay.setDirections(response);
-    //                        alert('ok');
-
-                    }
-                    else {
-                        alert('failed');
-                    }
-                }
-                );
-
-
-            }
-            function calcRoute(listMarkers) {
-
-                var waypts = [];
-                for (var marker in listMarkers) {
-                    listMarkers[marker].setVisible(false);
-                    var element = listMarkers[marker].position;
-                     if(marker &gt; 0 &amp;&amp; marker &lt; (listMarkers.length-1)){                
-                        waypts.push({
-                        location:""+element.A+","+element.F,
-                        stopover:true});
-                    }
-                }
-
-
-                request = {
-                    origin: "" + listMarkers[0].position.A + "," + listMarkers[0].position.F,
-                    destination: "" + listMarkers[listMarkers.length - 1].position.A + "," + listMarkers[listMarkers.length - 1].position.F,
+                    origin: tab[0].replace(":",","),
+                    destination: tab[tab.length - 1].replace(":",","),
                     waypoints: waypts,
                     travelMode: google.maps.TravelMode.WALKING
                 };
