--- a/beck_app/src/main/webapp/user_views/events/Create.xhtml
+++ b/beck_app/src/main/webapp/user_views/events/Create.xhtml
@@ -86,7 +86,7 @@
            </p:scrollPanel>
         </p:dialog>
         
-         <script src="http://maps.google.com/maps/api/js?sensor=false" 
+       <script src="http://maps.google.com/maps/api/js?sensor=false" 
         type="text/javascript"></script>
         <script type="text/javascript">
                         var currentMarker = null;
@@ -94,7 +94,6 @@
                         var directionsService = new google.maps.DirectionsService();
                         var directionsDisplay = new google.maps.DirectionsRenderer();
                         var request;
-                        var handleClick=true;
                         function init() {
                             var mapOptions = {
                                 center: new google.maps.LatLng(41.381542, 2.122893),
@@ -105,20 +104,18 @@
                             google.maps.event.addListener(map, 'click', function (e) {
                                 handlePointClick(e.latLng, map);
                             });
-                            handleClick=true;
+
                         }
                         function handlePointClick(event) {
-                            if(handleClick){
-                                if (currentMarker === null) {
-                                    document.getElementById('EventCreateForm:lat').value = event.A;
-                                    document.getElementById('EventCreateForm:lng').value = event.F;
+                            if (currentMarker === null) {
+                                document.getElementById('EventCreateForm:lat').value = event.A;
+                                document.getElementById('EventCreateForm:lng').value = event.F;
 
-                                    currentMarker = new google.maps.Marker({
-                                        position: new google.maps.LatLng(event.A, event.F),
-                                        map: map
-                                    });
-                                    markerAddComplete();
-                                }
+                                currentMarker = new google.maps.Marker({
+                                    position: new google.maps.LatLng(event.A, event.F),
+                                    map: map
+                                });
+                                markerAddComplete();
                             }
                         }
                         function handlePointClick2(position, map) {
@@ -192,7 +189,6 @@
 
             }
             function calcRoute2() {
-                 handleClick=false;
                  var mapOptions = {
                                 center: new google.maps.LatLng(41.381542, 2.122893),
                                 zoom: 15
@@ -203,14 +199,14 @@
                                 handlePointClick(e.latLng, map);
                             });
 
-                remoteChangeCommand();
+                //remoteChangeCommand();
                 var valueFromSrver =document.getElementById('EventViewForm:hiddenButton').value;
                 var mess=valueFromSrver.replace("]","").replace("[","");
                 var tab=mess.split(", ");
                 var waypts = [];
                 for (var marker in tab) {                  
                     var element = tab[marker];
-                     if(marker &gt; 0 &amp;&amp; marker &lt; (tab.length-1) &amp;&amp; marker &lt; 7){                
+                     if(marker &gt; 0 &amp;&amp; marker &lt; (tab.length-1) &amp;&amp; marker &lt; 4){                
                         waypts.push({
                         location:element.replace(":",","),
                         stopover:true});
